Ajustes calculo frete

--- a/src/app/pages/createProduct/createProduct.component.html
+++ b/src/app/pages/createProduct/createProduct.component.html
@@ -136,7 +136,7 @@
 
                   <div class="row price-row mt-4">
                      <div class="col-md-4 col-sm-6">
-                        <h6><a href="https://www.correios.com.br/enviar-e-receber/precisa-de-ajuda/limites-de-dimensoes-e-peso" target="_blank">Testar Cálculo Frete</a></h6>
+                        <h6>Testar Cálculo Frete</h6>
                      </div> 
                   </div>
                   <div class="row price-row">
