--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -15,7 +15,7 @@
 <div class="main">
     <div class="section text-center">
     <div id="middle" class="container">
-        <div class="row mb-4">
+        <div class="row">
             <div class="col-md-8 mr-auto ml-auto">
                 <h2 class="title">Conheça nossos serviços</h2>
                 <h5 class="description">Imprimimos em 3d seus projetos com impressoras de alta qualidade e diversos materiais.
@@ -26,7 +26,7 @@
         </div>
         <br/><br/>
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-4 mt-5 mb-3">
                 <div class="info">
                     <div class="card card-profile card-plain">
                     <div class="card-avatar">
@@ -39,7 +39,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 mt-5">
                 <div class="info">
                     <div class="card card-profile card-plain">
                         <div class="card-avatar">
@@ -52,7 +52,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 mt-5">
                 <div class="info">
                     <div class="card card-profile card-plain">
                         <div class="card-avatar">
