--- a/src/app/pages/order/order.component.html
+++ b/src/app/pages/order/order.component.html
@@ -1,7 +1,7 @@
 <div class="page-header page-header-xs" style="background-image: url('./assets/img/productDetail.jpg');">
     <div class="filter"></div>
  </div>
-<div class="main">
+ <div class="main">
     <div class="section text-center">
     <div id="middle" class="container">
         <div class="row">
@@ -15,7 +15,7 @@
         </div>
         <br/><br/>
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-4 mt-5 mb-3">
                 <div class="info">
                     <div class="card card-profile card-plain">
                     <div class="card-avatar">
@@ -28,7 +28,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 mt-5">
                 <div class="info">
                     <div class="card card-profile card-plain">
                         <div class="card-avatar">
@@ -41,7 +41,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 mt-5">
                 <div class="info">
                     <div class="card card-profile card-plain">
                         <div class="card-avatar">
