Adiciona redes sociais

--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -14,7 +14,7 @@
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item" *ngIf="!isDocumentation()">
                     <a class="nav-link" rel="tooltip" title="Curta a gente no Facebook" data-placement="bottom"
-                        href="https://www.facebook.com" target="_blank">
+                        href="https://www.facebook.com/bemaker3d.print" target="_blank">
                         <i class="fa fa-facebook-square"></i>
                         <p class="d-lg-none">Facebook</p>
                     </a>
@@ -28,7 +28,7 @@
                 </li>
                 <li class="nav-item" *ngIf="!isDocumentation()">
                     <a class="nav-link" rel="tooltip" title="Entre em contato" data-placement="bottom"
-                        href="https://linkwhatsapp" target="_blank">
+                        href="https://api.whatsapp.com/send?phone=+55 55 9732-6812&text=" target="_blank">
                         <i class="fa fa-whatsapp"></i>
                         <p class="d-lg-none">Whatsapp</p>
                     </a>
