Ajuste links no email

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -3,7 +3,7 @@
         <div class="row">
             <nav class="footer-nav">
                 <ul>
-                    <li><a href="https://imobpoc.online/">&lt;BeMaker&gt;</a></li>
+                    <li><a href="https://bemaker.store/">&lt;BeMaker&gt;</a></li>
                 </ul>
             </nav>
             <div class="credits ml-auto">
