Link de download order

--- a/src/app/pages/orderDetail/orderDetail.component.html
+++ b/src/app/pages/orderDetail/orderDetail.component.html
@@ -129,7 +129,7 @@
               <i class="icon nc-icon nc-app"></i> 
           </div>
               <p>{{ file.key }}</p>
-              <a href="{{ file.url }}">Download</a>
+              <a href="{{ file.file_url }}">Download</a>
       </div>
     </div>
       </div> 
@@ -140,7 +140,7 @@
             <i class="icon nc-icon nc-app"></i> 
         </div>
             <p>{{ file.key }}</p>
-            <a href="{{ file.url }}">Download</a>
+            <a href="{{ file.file_url }}">Download</a>
     </div>
   </div>
     </div> 
